[tool.poetry]
name = "Sleep"
version = "0.1.0"
description = ""
authors = ["capybasilisk <capybasilisk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sounddevice = "^0.3.15"
numpy = "^1.19.0"
scipy = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
